# uncode

./: .gitignore  .uncode.json  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
_fixtures/demo_project/code/: Home.kt
_fixtures/demo_project/design/: domain-language.yml
_fixtures/demo_project/story/: 1-first-story.feature
_fixtures/demo_project/story/done/: .gitkeep
design/: architecture.adl  architecture.yml  guard.rules  modeling.muml  modeling.uml
docs/adr/: 0001-use-xi-core-as-base-editor.md  0002-program-language-parser.md  0003-use-rpc-for-communication-protocol.md  0004-use-ctags-for-struct-analysis.md  0005-use-psa-for-project-builder.md  0006-use-gherkin-rust-for-story-parser.md  0007-use-theia-as-editor-for-code.md  0008-kanban-for-react.md  0009-hotkey-from-native-rs.md  0010-architecture-description-language.md  0011-archimate-for-first-version-architecture-langauge.md  0012-dap-for-debugger.md  0013-c4model.md  0014-design-to-code.md  README.md
docs/architecture/: api.md  arch-gov.md  arch-model.md  model-driven.md
docs/lsp/: test_lsp.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs  menu.rs  uncode_config.rs  workspace_config.rs
story/: 002-ide-init-design.feature  004-graph-for-uml.feature  005-arch-gov-design.feature  006-file-watcher.feature  008-syntax-analysis.feature  009-code-generator.feature  011-python-language-support.feature  012-c-cpp-support.feature  013-create-new-card.feature  014-move-new-story.feature  015-language-icon.feature  017-parser-generator-spike-tree-sitter.feature  018-story-with-id.feature  019-requirements-model.feature  20-observer-ad-code.feature  arch-gov-design.feature  c-cpp-support.feature  chinese-story.feature  code-generator.feature  code-map-architecture.feature  create-new-card.feature  graph-for-uml.feature  ide-init-design.feature  language-service.feature  model-tracking.feature  python-language-support.feature  rust-language-support.feature  story-with-id.feature  syntax-analysis.feature
uncode/: Cargo.toml  README.md
uncode-ui/: config-overrides.js  package-lock.json  package.json  tsconfig.json
uncode-ui/internals/startingTemplate/src/app/: index.tsx
uncode-ui/internals/startingTemplate/src/app/pages/DesignPage/: index.tsx
uncode-ui/public/: index.html
uncode-ui/src/: tauri-bridge.ts  tauri-shortcuts.ts  uncode-bridge.ts  uncode-shortcuts.ts
uncode-ui/src/app/: index.tsx
uncode-ui/src/app/components/: Memarid.tsx
uncode-ui/src/app/components/NavBar/: Logo.tsx  Nav.tsx  index.tsx
uncode-ui/src/app/components/PageWrapper/: index.ts
uncode-ui/src/app/pages/CodePage/: Loadable.tsx  client.ts  index.tsx
uncode-ui/src/app/pages/DesignPage/: Loadable.tsx  index.tsx
uncode-ui/src/app/pages/HomePage/: index.tsx
uncode-ui/src/app/pages/NotFoundPage/__tests__/__snapshots__/: index.test.tsx.snap
uncode-ui/src/app/pages/StoryPage/: Loadable.tsx  index.tsx
uncode-ui/src/styles/: global-styles.ts
uncode-ui/src/styles/theme/: themes.ts
uncode-ui/src/types/: RootState.ts
uncode/src/: lib.rs
uncode/src/language/: mod.rs
uncode/src/language/story/: mod.rs  story.pest
uncode/src/rpc/: mod.rs
uncode/src/rpc_service/: mod.rs  world.rs
uncode/uncode-core/: Cargo.toml
uncode/uncode-core/src/: file_entry.rs  lib.rs
uncode/uncode-core/src/domain/: architecture_model.rs  file_entry.rs  mod.rs  story_model.rs
uncode/uncode-story/: Cargo.toml
uncode/uncode-story/src/: lib.rs  main.rs
uncode/uncode-story/story/: 1-first-story.feature
