[package]
name = "uncode"
version = "0.1.0"
description = "A Tauri App"
authors = [ "admin@inherd.org", "h@phodal.com" ]
license = ""
repository = ""
default-run = "uncode"
edition = "2018"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta-rc.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta-rc.4", features =["api-all"]}
uncode_core = { path = "../uncode/uncode-core" }
uncode_story = { path = "../uncode/uncode-story" }

log = "0.4.8"
tracing-subscriber = "0.2.17"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]


[[bin]]
name = "uncode"
path = "src/main.rs"
