[package]
name = "uncode"
# release version need to change in `package.json`
#
version = "0.0.2"
description = "Cloud dev IDE"
authors = [ "admin@inherd.org", "h@phodal.com" ]
license = ""
repository = ""
default-run = "uncode"
edition = "2018"
build = "build.rs"

[build-dependencies]
tauri-build = "1.0.0-beta.4"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.7", features = ["api-all"] }
uncode_core = { path = "../uncode/uncode-core" }
uncode_story = { path = "../uncode/uncode-story" }

modeling = "0.1.5"

framework = "0.2.4"

# save config
dirs = "3.0"

log = "0.4.8"
tracing-subscriber = "0.2.17"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
