[package]
name = "uncode_rpc"
version = "0.0.2"
authors = ["Inherd Group <group@inherd.org>", "Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/uncode"
documentation = "https://github.com/phodal/uncode"
homepage = "https://github.com/phodal/uncode"
description = """
Uncode is a nocode IDE with POC.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".coco/*",
    "benchmark/*",
    "fixtures/*",
    "targets/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
]

[dependencies]
# grammar generator
pest = "2.1.3"
pest_derive = "2.1.0"

# RPC
futures = "0.3.13"
tarpc = { version = "0.25", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }

clap = "2.33"
env_logger = "0.8"

# serial
serde = { version = "1.0" }

[workspace]
members = [
  'uncode-core',
  'uncode-story'
]
